--- a/about.html
+++ b/about.html
@@ -183,13 +183,12 @@
                             <div class="col-md-3 ml-auto">
                                 <h2 class="footer-heading mb-4">Quick Links</h2>
                                 <ul class="list-unstyled">
-                                    <li><a href="index.html#services-section" class="smoothscroll">About Us</a></li>
-                                    <li><a href="index.html#services-section" class="smoothscroll">Services</a></li>
-                                    <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
-                                    <li><a href="index.html" class="smoothscroll">Contact Us</a></li>
+                                    <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
                                     <li><a href="https://drive.google.com/file/d/1mO25DjjqNH7ULJmgB3cTCID4RJIg2MlE/view?usp=sharing"
-                                            class="smoothscroll">Terms and Condition</a></li>
+                                            class="smoothscroll">Terms and Policy</a></li>
                                     <li><a href="tc.html" class="smoothscroll">Join us </a></li>
+                                    <li><a href="tc.html" class="smoothscroll">FAQ </a></li>
+
                                 </ul>
                             </div>
                             <div class="col-md-3">
