--- a/app.html
+++ b/app.html
@@ -54,13 +54,13 @@
                         <nav class="site-navigation position-relative text-right" role="navigation">
 
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="index.html#home-section" class="nav-link">Home</a></li>
+                                <li><a href="index.html" class="nav-link">Home</a></li>
                                 <li>
-                                    <a href="index.html#about-section" class="nav-link">About Us</a>
+                                    <a href="about.html" class="nav-link">About Us</a>
                                 </li>
                                 <li><a href="index.html#services-section" class="nav-link">Services</a></li>
                                 <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
-                                <li><a href="Get-parking.html" class="nav-link">Get Parking</a></li>
+                                <li><a href="#" class="nav-link">Get Parking</a></li>
                                 <li><a href="index.htmltc.html" class="nav-link">FAQ</a></li>
                             </ul>
                         </nav>
@@ -84,8 +84,9 @@
                         <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p> -->
                         <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with Pride </p>
                         <div data-aos="fade-up" data-aos-delay="100">
-                            <a href="https://apk.e-droid.net/apk/app2620708-m6iux7.apk?v=3" class="btn smoothscroll btn-primary mr-2 mb-2">Download App</a>
-                          </div>
+                            <a href="https://apk.e-droid.net/apk/app2620708-m6iux7.apk?v=3"
+                                class="btn smoothscroll btn-primary mr-2 mb-2">Download App</a>
+                        </div>
                     </div>
 
                 </div>
@@ -158,6 +159,15 @@
     </div>
 
 
+
+
+
+
+
+
+
+
+    <!-- Footer Start  -->
     <footer class="site-footer">
         <div class="container">
             <div class="row">
@@ -171,13 +181,12 @@
                         <div class="col-md-3 ml-auto">
                             <h2 class="footer-heading mb-4">Quick Links</h2>
                             <ul class="list-unstyled">
-                                <li><a href="index.html#about-section" class="smoothscroll">About Us</a></li>
-                                <li><a href="index.html#services-section" class="smoothscroll">Services</a></li>
-                                <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
-                                <li><a href="index.html#contact-section" class="smoothscroll">Contact Us</a></li>
+                                <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
                                 <li><a href="https://drive.google.com/file/d/1mO25DjjqNH7ULJmgB3cTCID4RJIg2MlE/view?usp=sharing"
-                                        class="smoothscroll">Terms and Condition</a></li>
-                                <li><a href="index.html#tc.html" class="smoothscroll">Join us </a></li>
+                                        class="smoothscroll">Terms and Policy</a></li>
+                                <li><a href="tc.html" class="smoothscroll">Join us </a></li>
+                                <li><a href="tc.html" class="smoothscroll">FAQ </a></li>
+
                             </ul>
                         </div>
                         <div class="col-md-3">
@@ -247,6 +256,12 @@
             </div>
         </div>
     </footer>
+    <!-- Footer Start  -->
+
+
+
+
+
     </div>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/jquery-ui.js"></script>
