--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </li>
                 <li><a href="#services-section" class="nav-link">Services</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                <li><a href="Get-parking.html" class="nav-link">Get Parking</a></li>
+                <li><a href="app.html" class="nav-link">Get Parking</a></li>
                 <li><a href="tc.html" class="nav-link">FAQ</a></li>
               </ul>
             </nav>
@@ -395,13 +395,12 @@
               <div class="col-md-3 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
-                  <li><a href="about.html" class="smoothscroll">About Us</a></li>
-                  <li><a href="#services-section" class="smoothscroll">Services</a></li>
-                  <!-- <li><a href="#vision-s" class="smoothscroll">Testimonials</a></li> -->
+
                   <li><a href="#contact-section" class="smoothscroll">Contact Us</a></li>
                   <li><a href="https://drive.google.com/file/d/1mO25DjjqNH7ULJmgB3cTCID4RJIg2MlE/view?usp=sharing"
                       class="smoothscroll">Terms and Policy</a></li>
                   <li><a href="tc.html" class="smoothscroll">Join us </a></li>
+                  <li><a href="tc.html" class="smoothscroll">FAQ </a></li>
 
                 </ul>
               </div>
