--- a/about.html
+++ b/about.html
@@ -58,11 +58,11 @@
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                                 <li><a href="index.html" class="nav-link">Home</a></li>
                                 <li>
-                                    <a href="index.html#about-section" class="nav-link">About Us</a>
+                                    <a href="#" class="nav-link">About Us</a>
                                 </li>
                                 <li><a href="index.html#services-section" class="nav-link">Services</a></li>
                                 <li><a href="index.html#contact-section" class="nav-link">Contact</a></li>
-                                <li><a href="Get-parking.html" class="nav-link">Get Parking</a></li>
+                                <li><a href="app.html" class="nav-link">Get Parking</a></li>
                                 <li><a href="tc.html" class="nav-link">FAQ</a></li>
                             </ul>
                         </nav>
