--- a/about.html
+++ b/about.html
@@ -154,7 +154,9 @@
                                 In conclusion, our parking website is your go-to destination for all your parking needs.
                                 With a wide range of parking options, real-time availability and pricing information,
                                 and a commitment to safety and security, we're here to make your parking experience
-                                stress-free and convenient. So why wait? Download our App today to book the
+                                stress-free and convenient. So why wait? <span><a href="app.html"> Download our
+                                        App</a></span>
+                                today to book the
                                 perfect parking spot for you!
                             </p>
                         </div>
