--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
 
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
-                            <!-- <h3 class="h3 mb-4 text-black">About Parkoba </h3> -->
+                            <h3 class="h3 mb-4 text-black">Parkoba mission and Vision </h3>
                             <p class="about-text">Whether you need
                                 help finding a parking spot or have questions about our services, our friendly and
                                 knowledgeable customer service team is always available to assist you.
