--- a/about.html
+++ b/about.html
@@ -121,16 +121,10 @@
                                 stress-free and convenient parking experience. Whether you need to park for a few hours
                                 or several days, we have a wide range of parking options available to suit your needs.
 
-                                Our website is designed to make finding and booking a parking spot as easy as possible.
-                                With our user-friendly interface, you can quickly search for parking in various
-                                locations around the city and compare pricing and availability in real-time. We also
-                                offer flexible booking options, so you can easily adjust your plans as needed.
-
-                                At our parking website, we take your safety and security seriously. That's why we
-                                partner with reputable parking providers who offer secure parking facilities with 24/7
-                                surveillance and on-site staff to ensure your vehicle is always safe. We also use
-                                advanced technology to ensure that your payment and personal information is secure and
-                                protected.
+                                Our mission is to enhance parking accessibility while delivering a customer-centric
+                                experience with sustainable solutions and prioritizing safety. We engage with
+                                communities, drive innovation, empower employees, promote responsible parking behavior,
+                                and ensure accessibility for all while committing to continuous improvement.
 
                                 Our team of experienced professionals is dedicated to providing you with the best
                                 customer service and support. We understand that parking can be stressful, which is why
