--- a/about.html
+++ b/about.html
@@ -125,10 +125,19 @@
                                 experience with sustainable solutions and prioritizing safety. We engage with
                                 communities, drive innovation, empower employees, promote responsible parking behavior,
                                 and ensure accessibility for all while committing to continuous improvement.
-
+                                <br><br>
                                 Our team of experienced professionals is dedicated to providing you with the best
                                 customer service and support. We understand that parking can be stressful, which is why
                                 we strive to make your experience as smooth and enjoyable as possible.
+                                Whether you need
+                                help finding a parking spot or have questions about our services, our friendly and
+                                knowledgeable customer service team is always available to assist you.
+                                <br><br>
+                                In addition to our standard parking services, we also offer valet parking and other
+                                premium options for those who require an extra level of convenience. And if you're a
+                                frequent parker, be sure to check out for our loyalty program, which will rewards you
+                                with
+                                discounts and other perks for each booking.
                             </p>
                         </div>
                     </div>
@@ -136,14 +145,26 @@
                     <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <div class="mb-4">
                             <h3 class="h3 mb-4 text-black">Parkoba mission and Vision </h3>
-                            <p class="about-text">Whether you need
-                                help finding a parking spot or have questions about our services, our friendly and
-                                knowledgeable customer service team is always available to assist you.
+                            <p class="about-text">
+                                <Span>
+                                    <h4 style="color: rgb(37,91,254)">Vision:</h4>
+                                </Span>
+                                To become the leading parking solutions provider globally, revolutionizing urban
+                                mobility with cutting-edge technology and unparalleled customer experiences.
 
-                                In addition to our standard parking services, we also offer valet parking and other
-                                premium options for those who require an extra level of convenience. And if you're a
-                                frequent parker, be sure to check out our loyalty program, which rewards you with
-                                discounts and other perks for each booking.
+                                <br><br><br>
+                                <Span>
+                                    <h4 style="color: rgb(37,91,254);">Added Features</h4>
+                                </Span>
+                                <li>Seamless Mobile App: Intuitive and user-friendly app for quick access to parking
+                                    services and information. </li>
+                                <li> On-Demand Parking: Instantly book and secure parking spaces anytime, anywhere.
+                                </li>
+                                <li> Enhanced Security: Well-lit, monitored facilities with advanced surveillance for
+                                    customer safety. </li>
+                                <li> Sustainability Initiatives: Promoting eco-friendly practices and electric vehicle
+                                    charging options.</li>
+                                <br><br>
 
                                 In conclusion, our parking website is your go-to destination for all your parking needs.
                                 With a wide range of parking options, real-time availability and pricing information,
