--- a/index.html
+++ b/index.html
@@ -63,11 +63,26 @@
                 <li>
                   <a href="#about-section" class="nav-link">About Us</a>
                 </li>
-                <li><a href="#services-section" class="nav-link">Services</a></li>
+                <div class="container">
+                  <div class="row align-items-center justify-content-center">
+                    <div class="col-md-8 mt-lg-5 text-center">
+                      <h1 class="text-uppercase" data-aos="fade-up">Download Parkoba</h1>
+                      <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p> -->
+                      <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with Pride </p>
+                      <div data-aos="fade-up" data-aos-delay="100">
+                        <a href="https://apk.e-droid.net/apk/app2620708-m6iux7.apk?v=3"
+                          class="btn smoothscroll btn-primary mr-2 mb-2">Download App</a>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
+
+                <!-- <li><a href="#services-section" class="nav-link">Services</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
                 <li><a href="app.html" class="nav-link">Get Parking</a></li>
                 <li><a href="tc.html" class="nav-link">FAQ</a></li>
-              </ul>
+              </ul> -->
             </nav>
           </div>
           <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#"
