--- a/index.html
+++ b/index.html
@@ -63,26 +63,11 @@
                 <li>
                   <a href="#about-section" class="nav-link">About Us</a>
                 </li>
-                <div class="container">
-                  <div class="row align-items-center justify-content-center">
-                    <div class="col-md-8 mt-lg-5 text-center">
-                      <h1 class="text-uppercase" data-aos="fade-up">Download Parkoba</h1>
-                      <!-- <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Parkoba</p> -->
-                      <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Park with Pride </p>
-                      <div data-aos="fade-up" data-aos-delay="100">
-                        <a href="https://apk.e-droid.net/apk/app2620708-m6iux7.apk?v=3"
-                          class="btn smoothscroll btn-primary mr-2 mb-2">Download App</a>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-
-                <!-- <li><a href="#services-section" class="nav-link">Services</a></li>
+                <li><a href="#services-section" class="nav-link">Services</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
                 <li><a href="app.html" class="nav-link">Get Parking</a></li>
                 <li><a href="tc.html" class="nav-link">FAQ</a></li>
-              </ul> -->
+              </ul>
             </nav>
           </div>
           <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#"
@@ -407,6 +392,7 @@
                 <p>Our mission is helping Nigeria curb The flow of traffic and illegal
                   parking. </p>
               </div>
+
               <div class="col-md-3 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
                 <ul class="list-unstyled">
@@ -433,6 +419,7 @@
               </div>
             </div>
           </div>
+
           <div class="col-md-3">
             <h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
             <form name="submit-to-google-sheet" class="footer-subscribe">
@@ -474,6 +461,26 @@
             // const form = document.getElementById('subscribe-form');
             // form.addEventListener('submit', submitForm);
           </script>
+
+
+
+
+
+
+          <div class="download2">
+            <a class="playstore-button" href="https://apk.e-droid.net/apk/app2620708-m6iux7.apk?v=3">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="icon" viewBox="0 0 512 512">
+                <path
+                  d="M99.617 8.057a50.191 50.191 0 00-38.815-6.713l230.932 230.933 74.846-74.846L99.617 8.057zM32.139 20.116c-6.441 8.563-10.148 19.077-10.148 30.199v411.358c0 11.123 3.708 21.636 10.148 30.199l235.877-235.877L32.139 20.116zM464.261 212.087l-67.266-37.637-81.544 81.544 81.548 81.548 67.273-37.64c16.117-9.03 25.738-25.442 25.738-43.908s-9.621-34.877-25.749-43.907zM291.733 279.711L60.815 510.629c3.786.891 7.639 1.371 11.492 1.371a50.275 50.275 0 0027.31-8.07l266.965-149.372-74.849-74.847z">
+                </path>
+              </svg>
+              <span class="texts">
+                <span class="text-1">Download now </span>
+                <!-- <span class="text-2">Google Play</span> -->
+              </span>
+            </a>
+          </div>
+
         </div>
         <div class="row pt-5 mt-5 text-center">
           <div class="col-md-12">
