--- a/testimonial.html
+++ b/testimonial.html
@@ -85,7 +85,7 @@
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
                         <a href="service.html" class="nav-item nav-link">Service</a>
-                         <!-- <div class="nav-item dropdown">
+                        <!-- <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Cars</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="car.html" class="dropdown-item">Car Parking</a>
@@ -259,36 +259,7 @@
 
 
     <!-- Vendor Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="owl-carousel vendor-carousel">
-                <div class="bg-light p-4">
-                    <img src="img/vendor-1.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-2.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-3.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-4.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-5.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-6.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-7.png" alt="">
-                </div>
-                <div class="bg-light p-4">
-                    <img src="img/vendor-8.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+
     <!-- Vendor End -->
 
 
@@ -296,32 +267,41 @@
     <div class="container-fluid bg-secondary py-5 px-sm-3 px-md-5" style="margin-top: 90px;">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-uppercase text-light mb-4">Get In Touch</h4>
-                <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope text-white mr-3"></i>info@example.com</p>
+                <h3 class="text-uppercase text-light mb-4">Get In Touch</h3>
+                <p class="mb-2"><i class="fa fa-map-marker-alt text-white mr-3"></i> Lagos, Nigeria</p>
+                <a href="tel: +234-9160206245 ">
+                    <p class="mb-2"><i class="fa fa-phone-alt text-white mr-3"></i>+234-9160206245</p>
+                </a>
+                <a href="mailto:parkobaofficial@gmail.com">
+                    <p><i class="fa fa-envelope text-white mr-3"></i>parkobaofficial@gmail.com</p>
+                </a>
                 <h6 class="text-uppercase text-white py-2">Follow Us</h6>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-dark btn-lg-square mr-2"
+                        href="https://www.facebook.com/profile.php?id=100090328631678"><i
+                            class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-lg btn-dark btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-dark btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-lg btn-dark btn-lg-square" href="https://www.instagram.com/parkobaofficial/"><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h4 class="text-uppercase text-light mb-4">Usefull Links</h4>
+                <h4 class="text-uppercase text-light mb-4">Useful Links</h4>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Private
+                    <a class="text-body mb-2" href="Privacy Policy.html"><i
+                            class="fa fa-angle-right text-white mr-2"></i>Privacy
                         Policy</a>
-                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Term &
+                    <a class="text-body mb-2" href="Terms and condition.html"><i
+                            class="fa fa-angle-right text-white mr-2"></i>Terms &
                         Conditions</a>
-                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>New Member
-                        Registration</a>
-                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Affiliate
-                        Programme</a>
-                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Return &
-                        Refund</a>
-                    <a class="text-body" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Help & FQAs</a>
+                    <!-- <a class="text-body mb-2" href="Faq.html"><i class="fa fa-angle-right text-white mr-2"></i>FAQ</a> -->
+                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Register your
+                        Parking Spot</a>
+                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i> Booking
+                        Cancelation & Refunds</a>
+                    <a class="text-body" href="Faq.html"><i class="fa fa-angle-right text-white mr-2"></i>Help &
+                        FQAs</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
@@ -349,8 +329,7 @@
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-uppercase text-light mb-4">Newsletter</h4>
-                <p class="mb-4">Volup amet magna clita tempor. Tempor sea eos vero ipsum. Lorem lorem sit sed elitr sed
-                    kasd et</p>
+                <p class="mb-4">Subscribe to our Newsletter to get daily Updates, News and Tips.</p>
                 <div class="w-100 mb-3">
                     <div class="input-group">
                         <input type="text" class="form-control bg-dark border-dark" style="padding: 25px;"
@@ -360,13 +339,14 @@
                         </div>
                     </div>
                 </div>
-                <i>Lorem sit sed elitr sed kasd et</i>
+                <i>Thanks for Subscribing</i>
             </div>
         </div>
     </div>
     <div class="container-fluid bg-dark py-4 px-sm-3 px-md-5">
-        <p class="mb-2 text-center text-body">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
-        <p class="m-0 text-center text-body">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="mb-2 text-center text-body">&copy; <a href="#">Parkoba</a>. All Rights Reserved.</p>
+        <p class="m-0 text-center text-body">Designed and Developed by <a href="https://bit.ly/Alongetobias">Tobias</a>
+        </p>
     </div>
     <!-- Footer End -->
 
@@ -385,7 +365,7 @@
     <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
     <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
 
-    <!-- Template Javascript -->
+    <!--   Javascript -->
     <script src="js/main.js"></script>
 </body>
 
