--- a/about.html
+++ b/about.html
@@ -259,6 +259,21 @@
     <!-- About End -->
 
 
+
+    <!-- Vision and Misson for Parkoba Start  -->
+    <div class="containe">
+        <div class="text-colum">
+            <h1>Parkoba vission</h1>
+            <p>Still working on this .</p>
+        </div>
+        <div class="image-colum">
+            <img class="img2" src="img/gallery-5.jpg" alt="Your Image">
+        </div>
+    </div>
+    <!-- Vision and Misson for Parkoba end  -->
+
+
+
     <!-- Banner Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
