--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h4 class="text-white text-uppercase mb-md-3">Book A Spot</h4>
                             <h1 class="display-1 text-white mb-md-4">Quality Spots with Unlimited surveillance</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 mt-2">Reserve Spot Now</a>
+                            <a href="form.html" class="btn btn-primary py-md-3 px-md-5 mt-2">Book Spot Now</a>
                         </div>
                     </div>
                 </div>
