--- a/form.html
+++ b/form.html
@@ -30,6 +30,9 @@
                 <span></span>
                 Submit
             </a>
+            <a href="">
+                <p>forgot password?</p>
+            </a>
         </form>
     </div>
 
