--- a/form.html
+++ b/form.html
@@ -22,7 +22,9 @@
             <div class="user-box">
                 <input type="password" name="" required="">
                 <label>Password</label>
+                
             </div>
+            
             <a href="#">
                 <span></span>
                 <span></span>
@@ -30,10 +32,14 @@
                 <span></span>
                 Submit
             </a>
-            <a href="">
-                <p>forgot password?</p>
-            </a>
+
         </form>
+        <a href="">
+            <p>forgot password?</p>
+        </a>
+        <a href="">
+            <p>Don't have a account Sign up ?</p>
+        </a>
     </div>
 
 </body>
