--- a/form.html
+++ b/form.html
@@ -22,12 +22,12 @@
             <div class="user-box">
                 <input type="password" name="" required="">
                 <label>Password</label>
-                
+
             </div>
-            
+
             <a href="#">
                 <span></span>
-                <span></span>
+                <span></span> 
                 <span></span>
                 <span></span>
                 Submit
@@ -38,7 +38,7 @@
             <p>forgot password?</p>
         </a>
         <a href="">
-            <p>Don't have a account Sign up ?</p>
+            Dont have an account sign up </p>
         </a>
     </div>
 
