--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
                     <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
                         <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
                             style="width: 100px; height: 100px;">
+
                             <i class="fa fa-2x fa-headset text-secondary"></i>
                         </div>
                         <h4 class="text-uppercase m-0">24/7 Car Parking Support</h4>
@@ -288,6 +289,7 @@
                         </p>
                     </div>
                 </div>
+                <div class="service-item d-felx"></div>
                 <div class="col-lg-4 col-md-6 mb-2">
                     <div class="service-item d-flex flex-column justify-content-center px-4 mb-4">
                         <div class="d-flex align-items-center justify-content-between mb-3">
