--- a/about.html
+++ b/about.html
@@ -272,7 +272,42 @@
     </div>
     <!-- Vision and Misson for Parkoba end  -->
 
+    <div class="container-fluid py-5">
+        <div class="container py-5">
+            <div class="row mx-0">
 
+                <div class="col-lg-6 px-0">
+                    <div class="px-5 bg-dark d-flex align-items-center justify-content-between" style="height: 350px;">
+                        <div class="text-right">
+                            <h3 class="text-uppercase text-light mb-3">LOOKING FOR A PARKING SPOT?
+                            </h3>
+                            <p class="mb-4">Don't stress about finding a parking spot. You can easily find available
+                                spaces near you or where you're going and book them ahead of time with Parkoba
+
+                            </p>
+                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>
+                        </div>
+                        <img class="img-fluid flex-shrink-0 mr-n5 w-50 ml-4" src="img/banner-right.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-6 px-0">
+                    <div class="px-5 bg-secondary d-flex align-items-center justify-content-between"
+                        style="height: 350px;">
+                        <img class="img-fluid flex-shrink-0 ml-n5 w-50 mr-4" src="img/banner-left.png" alt="">
+                        <div class="text-right">
+                            <h3 class="text-uppercase text-light mb-3">HAVE A PARKING SPACE?
+                            </h3>
+                            <p class="mb-4">If you're interested in earning money through Parkoba, sign up and list your
+                                parking space or any extra home space on Parkoba.
+
+                            </p>
+                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Banner Start -->
     <div class="container-fluid py-5">
