--- a/about.html
+++ b/about.html
@@ -171,6 +171,7 @@
     <!-- About Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
+            <h1 class="display-1 text-primary text-center">01</h1>
             <h1 class="display-4 text-uppercase text-center mb-5">Welcome To <span class="text-primary">Parkoba</span>
             </h1>
             <div class="row justify-content-center">
@@ -192,122 +193,72 @@
                         We hope to become the world's leading parking service provider used by millions of drivers and
                         organizations such as: </p>
                 </div>
-                <!-- Vendor Start -->
-                <div class="container-fluid py-5">
-                    <div class="container py-5">
-                        <div class="owl-carousel vendor-carousel">
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-1.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-2.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-3.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-4.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-5.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-6.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-7.png" alt="">
-                            </div>
-                            <div class="bg-light p-4">
-                                <img src="img/vendor-8.png" alt="">
+
+            </div>
+        </div>
+        <!-- About End -->
+
+
+
+        <!-- Vision and Misson for Parkoba Start  -->
+        <div class="container-fluid py-5">
+            <div class="container pt-5 pb-3">
+                <h1 class="display-1 text-primary text-center">02</h1>
+                <h1 class="display-4 text-uppercase text-center mb-5">Parkoba <span class="text-primary">Mission and
+                        Vission
+                    </span>
+                </h1>
+                <div class="row justify-content-center">
+                    <div class="col-lg-10 text-center">
+                        <img class="w-75 mb-4" src="img/about.png" alt="">
+                        <p>We are a small startup enterprise dedicated in helping Nigeria curb The flow of traffic and
+                            illegal parking. We believe that all of our customers deserve the highest level of service,
+                            and
+                            we are committed to providing just that.Welcome to our parking website, your go-to
+                            destination
+                            for all your parking needs.
+                        </p>
+                    </div>
+
+                    <!-- Vendor Start -->
+                    <div class="container-fluid py-5">
+                        <div class="container py-5">
+                            <div class="owl-carousel vendor-carousel">
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-1.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-2.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-3.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-4.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-5.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-6.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-7.png" alt="">
+                                </div>
+                                <div class="bg-light p-4">
+                                    <img src="img/vendor-8.png" alt="">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Vendor End -->
             </div>
-            <div class="row mt-3">
-                <div class="col-lg-4 mb-2">
-                    <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
-                            style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-headset text-secondary"></i>
-                        </div>
-                        <h4 class="text-uppercase m-0">24/7 Car Rental Support</h4>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-2">
-                    <div class="d-flex align-items-center bg-secondary p-4 mb-4" style="height: 150px;">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
-                            style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-money-check-alt text-secondary"></i>
-                        </div>
-                        <h4 class="text-light text-uppercase m-0">Very Affodable</h4>
-                    </div>
-                </div>
-                <div class="col-lg-4 mb-2">
-                    <div class="d-flex align-items-center bg-light p-4 mb-4" style="height: 150px;">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary ml-n4 mr-4"
-                            style="width: 100px; height: 100px;">
-                            <i class="fa fa-2x fa-map-marker-alt text-secondary"></i>
-                        </div>
-                        <h4 class="text-uppercase m-0">Convinently Situated</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- About End -->
 
-
-
-    <!-- Vision and Misson for Parkoba Start  -->
-    <div class="containe">
-        <div class="text-colum">
-            <h1>Parkoba vission</h1>
-            <p>Still working on this .</p>
-        </div>
-        <div class="image-colum">
-            <img class="img2" src="img/gallery-5.jpg" alt="Your Image">
         </div>
     </div>
     <!-- Vision and Misson for Parkoba end  -->
 
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="row mx-0">
-
-                <div class="col-lg-6 px-0">
-                    <div class="px-5 bg-dark d-flex align-items-center justify-content-between" style="height: 350px;">
-                        <div class="text-right">
-                            <h3 class="text-uppercase text-light mb-3">LOOKING FOR A PARKING SPOT?
-                            </h3>
-                            <p class="mb-4">Don't stress about finding a parking spot. You can easily find available
-                                spaces near you or where you're going and book them ahead of time with Parkoba
-
-                            </p>
-                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>
-                        </div>
-                        <img class="img-fluid flex-shrink-0 mr-n5 w-50 ml-4" src="img/banner-right.png" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-6 px-0">
-                    <div class="px-5 bg-secondary d-flex align-items-center justify-content-between"
-                        style="height: 350px;">
-                        <img class="img-fluid flex-shrink-0 ml-n5 w-50 mr-4" src="img/banner-left.png" alt="">
-                        <div class="text-right">
-                            <h3 class="text-uppercase text-light mb-3">HAVE A PARKING SPACE?
-                            </h3>
-                            <p class="mb-4">If you're interested in earning money through Parkoba, sign up and list your
-                                parking space or any extra home space on Parkoba.
-
-                            </p>
-                            <a class="btn btn-primary py-2 px-4" href="">Start Now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Banner Start -->
     <div class="container-fluid py-5">
@@ -320,7 +271,8 @@
                         <div class="text-right">
                             <h3 class="text-uppercase text-light mb-3">HAVE A PARKING SPACE?
                             </h3>
-                            <p class="mb-4">If you're interested in earning money through Parkoba, sign up and list your
+                            <p class="mb-4">If you're interested in earning money through Parkoba, sign up and list
+                                your
                                 parking space or any extra home space on Parkoba.
 
                             </p>
@@ -346,9 +298,6 @@
         </div>
     </div>
     <!-- Banner End -->
-
-
-
 
 
     <!-- Footer Start -->
@@ -380,7 +329,8 @@
                             class="fa fa-angle-right text-white mr-2"></i>Terms &
                         Conditions</a>
                     <!-- <a class="text-body mb-2" href="Faq.html"><i class="fa fa-angle-right text-white mr-2"></i>FAQ</a> -->
-                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Register your
+                    <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i>Register
+                        your
                         Parking Spot</a>
                     <a class="text-body mb-2" href="#"><i class="fa fa-angle-right text-white mr-2"></i> Booking
                         Cancelation & Refunds</a>
