--- a/service.html
+++ b/service.html
@@ -171,7 +171,7 @@
     <!-- Services Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
-            <h1 class="display-1 text-primary text-center">02</h1>
+            <h1 class="display-1 text-primary text-center"></h1>
             <h1 class="display-4 text-uppercase text-center mb-5">Our Services</h1>
             <div class="row">
                 <div class="col-lg-4 col-md-6 mb-2">
